apps/subsystems/downloaders/sabnzbd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: downloaders
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
    spec:
      automountServiceAccountToken: false
      containers:
      - name: sabnzbd
        command:
        - /scripts/entrypoint.sh
        image: ghcr.io/linuxserver/sabnzbd:5.1.3@sha256:382f9bd4e3f6df2abf7bcc92edada0c5bd4d4ff26eb5416f257ac54989464fa1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api?mode=version
            port: 8080
        ports:
        - name: sabnzbd
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api?mode=version
            port: 8080
        resources:
          requests:
            cpu: 256m
            memory: 127Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /config
          name: sabnzbd-data
        - mountPath: /data
          name: sabnzbd-media
        - mountPath: /sabnzbd.ini.preconfigured
          name: downloader-config
          readOnly: true
          subPath: sabnzbd.ini
        - mountPath: /scripts
          name: sabnzbd-scripts
        - mountPath: /config/logs
          name: sabnzbd-logs
        - mountPath: /tmp
          name: sabnzbd-temp
      securityContext:
        runAsNonRoot: true
        runAsUser: ${media_writer_uid}
        runAsGroup: ${media_writer_gid}
        fsGroup: ${media_writer_gid}
        fsGroupChangePolicy: OnRootMismatch
      volumes:
      - name: sabnzbd-data
        persistentVolumeClaim:
          claimName: sabnzbd-data
      - name: sabnzbd-media
        persistentVolumeClaim:
          claimName: media
      - name: downloader-config
        secret:
          secretName: downloader-config
          optional: true
      - name: sabnzbd-scripts
        configMap:
          name: sabnzbd-scripts
          defaultMode: 0755
      - name: sabnzbd-logs
        emptyDir: {}
      - name: sabnzbd-temp
        emptyDir: {}
