apps/subsystems/downloaders/sabnzbd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: downloaders
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  selector:
    app.kubernetes.io/name: sabnzbd
  ports:
  - name: sabnzbd
    port: 8080
    targetPort: sabnzbd
    protocol: TCP
  type: ClusterIP
